@@ -167,6 +167,8 @@ CHANGE LOG
 
 Changes up to 0.90
 
+   * Fixed ribbon color and rendering bugs
+
    * Put in checking for overly long selection words to avoid seg.fault.
 
    * Incorporated Tom Lee's density wizard changes.
